# Tamizhi

./: LICENSE  LICENSES  Learning .html  Makefile  README.md  index.html  install.sh  output.bc  output.ll  tamizhi
.github/workflows/: publish.yml  release.yml
core/: http_runtime.c
examples/: Loop. tz  Loop2.tz  Main.tz  Tamil.tz  V.tz  loop.tz  tamizhiv01.tz  vanakkam.tz
include/: ast.h  codegen.h  codegen_bridge.h  lexer.h  parser.h
lib/: http.tz
src/: ast.c  codegen.c  lexer.c  main.c  parser.c  tamizhi_cli.c
src/codegen/: cg_alloca.c  cg_assign_ret.c  cg_bitcode.c  cg_dna.c  cg_else_start.c  cg_entry.c  cg_eval_ast.c  cg_finish_destroy.c  cg_func_call.c  cg_func_end.c  cg_func_start.c  cg_http.c  cg_if_body_end.c  cg_if_end.c  cg_if_start.c  cg_init.c  cg_loop_end.c  cg_loop_start.c  cg_math_ast.c  cg_math_op.c  cg_print.c  cg_return.c  cg_str.c  cg_system_call.c  cg_ternary.c  cg_trim.c  cg_var.c  cg_while_end.c  cg_while_start.c  codegen_bridge.h
src/ttr/core/: ttr_codegen.h  ttr_lexer.h  ttr_parser.h
src/ttr/src/: ttr_codegen.c  ttr_lexer.c  ttr_parser.c
storage/: project_binary.dna
tamizhi-py/: README.md  pyproject.toml  setup.py
tamizhi-py/tamizhi/: cli.py
