[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tamizhi"
version = "1.0.1"
description = "A Linux-native programming language built with C and LLVM."
readme = "README.md"
authors = [
  { name="Prabakaran", email="admin@developerlabs.online" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.7"

[project.scripts]
tamizhi = "tamizhi_pkg.cli:main"
