[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Tamizhi"
version = "v2.0.1"
description = "A Linux-native programming language built with C and LLVM."
readme = "README.md"
authors = [
  { name="Prabakaran", email="prabakaran20020430@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.7"

# 1. Scripts பகுதியில்:
[project.scripts]
tamizhi = "tamizhi.cli:main"

# 2. Setuptools பகுதியில்:
[tool.setuptools]
packages = ["tamizhi"]
